--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                     <div class="box p1"></div>
                     <div class="box p2"></div>
                     <div class="box p3"></div>
-                    <div class="box p4"></div>
+                    <div class="box p4 selected"></div>
                 </div>
               </div>
             </div>
         </section>
     </main>
+    <script src="./index.js"></script>
 </body>
 
 </html>
