--- a/index.html
+++ b/index.html
@@ -26,21 +26,49 @@
         <section>
             <h1>Kanban board</h1>
             <div class="modal">
-              <div class="left-section">
-                <textarea placeholder="Enter Your Task" ></textarea>
-              </div>
-              <div class="right-section">
-               <div class="close"> 
-                    <i class="fa-sharp fa-solid fa-xmark"></i>
+                <div class="left-section">
+                    <textarea placeholder="Enter Your Task"></textarea>
                 </div>
-                <div class="priority-filter">
-                    <div class="box p1"></div>
-                    <div class="box p2"></div>
-                    <div class="box p3"></div>
-                    <div class="box p4 selected"></div>
+                <div class="right-section">
+                    <div class="close">
+                        <i class="fa-sharp fa-solid fa-xmark"></i>
+                    </div>
+                    <div class="priority-filter">
+                        <div class="box p1"></div>
+                        <div class="box p2"></div>
+                        <div class="box p3"></div>
+                        <div class="box p4 selected"></div>
+                    </div>
                 </div>
-              </div>
             </div>
+            <div class="ticket-section">
+                <div class="ticket-container">
+                    <div class="ticket-priority p1"></div>
+                    <div class="ticket-id"></div>
+                    <div class="ticket-content">
+                        <textarea></textarea>
+                    </div>
+                    <div class="ticket-lock"></div>
+                </div>
+                <div class="ticket-container">
+                    <div class="ticket-priority p2"></div>
+                    <div class="ticket-id"></div>
+                    <div class="ticket-content"></div>
+                    <div class="ticket-lock"></div>
+                </div>
+                <div class="ticket-container">
+                    <div class="ticket-priority p3"></div>
+                    <div class="ticket-id"></div>
+                    <div class="ticket-content"></div>
+                    <div class="ticket-lock"></div>
+                </div>
+                <div class="ticket-container">
+                    <div class="ticket-priority p4"></div>
+                    <div class="ticket-id"></div>
+                    <div class="ticket-content"></div>
+                    <div class="ticket-lock"></div>
+                </div>
+                </div>
         </section>
     </main>
     <script src="./index.js"></script>
